Reset sideboard format from flex to grid, erase all other flex code

--- a/style.css
+++ b/style.css
@@ -36,6 +36,18 @@ body{
     background-color: pink;
 }
 
+ul li{
+    list-style: none;
+}
+
+.nav-link{
+    display: flex;
+}
+
+.nav-link img{
+    
+}
+
 .settings-nav{
     background-color: indigo;
 }
