--- a/style.css
+++ b/style.css
@@ -2,50 +2,28 @@ body{
     display: grid;
     grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 4fr;
+    min-width: 0;
+    min-height: 0;
     height: 100vh;
     margin: 0;
 }
 
+img{
+    max-width: 100%;
+}
+
 .side-board{
     background-color: #3b5998;
+    height: 100vh;
     grid-row: 1 / -1;
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-}
-
-.side-board div{
-    margin-top: 10px;
-}
-.logo{
-    background-color: orange;
-    display: flex;
-    gap: 5px;
-}
-
-.logo img{
-    flex-grow: 1;
-}
-
-.logo h2{
-    align-self: center;
-    margin-right: 5px;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 0.66fr 0.66fr repeat(6, minmax(0,0.33fr)) 0.66fr repeat(3, minmax(0,0.33fr)) 5fr;
+    /*grid-template-rows: 50px 50px repeat(6,25px) 50px repeat(3, 50px);*/
 }
 
 .main-nav{
     background-color: pink;
-}
-
-ul li{
-    list-style: none;
-}
-
-.nav-link{
-    display: flex;
-}
-
-.nav-link img{
-    
 }
 
 .settings-nav{
