--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: Roboto;
+    src: url("fonts/Roboto-Regular.ttf");
+}
+
+*{
+    color: white;
+    font-family: Roboto, sans-serif;
+}
+
 body{
     display: grid;
     grid-template-columns: 1fr 5fr;
