--- a/style.css
+++ b/style.css
@@ -18,19 +18,22 @@ body{
     margin: 0;
 }
 
-img{
-    max-width: 100%;
-}
+
 
 .side-board{
     background-color: #3b5998;
     height: 100vh;
     grid-row: 1 / -1;
+    padding-left: 5px;
     display: grid;
+    row-gap: 20px;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 0.66fr 0.66fr repeat(6, minmax(0,0.33fr)) 0.66fr repeat(3, minmax(0,0.33fr)) 5fr;
+    align-items: center;
     /*grid-template-rows: 50px 50px repeat(6,25px) 50px repeat(3, 50px);*/
 }
+
+
 
 .main-nav{
     background-color: pink;
