--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     src: url("fonts/Roboto-Regular.ttf");
 }
 
-*{
+:root{
     color: white;
     font-family: Roboto, sans-serif;
 }
@@ -30,15 +30,34 @@ body{
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 0.66fr 0.66fr repeat(6, minmax(0,0.33fr)) 0.66fr repeat(3, minmax(0,0.33fr)) 5fr;
     align-items: center;
-    /*grid-template-rows: 50px 50px repeat(6,25px) 50px repeat(3, 50px);*/
 }
 
 a{
     text-decoration: none;
 }
 
+a:visited{
+    color: white;
+}
+
 .header{
-    background-color: green;
+    display: flex;
+    flex-direction: column;
+    background-color: pink;
+    height: 100%;
+    font-family: sans-serif;
+    color: black;
+    
+}
+
+.header .top{
+    background-color: lime;
+    flex-grow: 1;
+}
+
+.header .bottom{
+    background-color: indigo;
+    flex-grow: 1;
 }
 
 .body{
