--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body{
     height: 100vh;
     grid-row: 1 / -1;
     padding-left: 5px;
+    padding-right: 5px;
     display: grid;
     row-gap: 20px;
     grid-template-columns: 1fr 3fr;
@@ -44,17 +45,38 @@ a:visited{
     display: flex;
     flex-direction: column;
     height: 100%;
-    font-family: sans-serif;
     color: black;
     
 }
 
 .header .top{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .header .top img{
     max-width: 100%;
+}
+
+.search-bar{
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+}
+
+.search-bar input{
+    border-radius: 20px;
+    width: 50%;
+}
+
+
+.top-right{
+    display: flex;
+    align-items: center;
+    padding-right: 10px;
+    gap: 20px;
+
 }
 
 .header .bottom{
