--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
 
 .side-board{
     background-color: #3b5998;
-    height: 100vh;
+    height: 100%;
     grid-row: 1 / -1;
     padding-left: 5px;
     padding-right: 5px;
@@ -162,6 +162,11 @@ a h4,  a p{
     grid-row: 2 / -1;
     grid-column: 1 / 2;
     background-color: yellow;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    padding: 15px;
+    gap: 15px;
 }
 
 .announcements-container{
@@ -180,5 +185,9 @@ a h4,  a p{
     grid-row: 4 / -1;
     grid-column: 2 / -1;
     background-color: blue;
+}
+
+.card-container{
+    background-color: white;
 }
 
