--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ body{
     margin: 0;
 }
 
+h4{
+    font-weight: bolder;
+}
+
 
 
 .side-board{
@@ -29,7 +33,7 @@ body{
     display: grid;
     row-gap: 20px;
     grid-template-columns: 1fr 3fr;
-    grid-template-rows: 0.66fr 0.66fr repeat(6, minmax(0,0.33fr)) 0.66fr repeat(3, minmax(0,0.33fr)) 5fr;
+    grid-template-rows: 0.33fr 0.33fr repeat(6, minmax(0,0.33fr)) 0.33fr repeat(3, minmax(0,0.33fr)) 5fr;
     align-items: center;
 }
 
@@ -60,6 +64,7 @@ a:visited{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-left: 15px;
 }
 
 .header .top img{
@@ -68,7 +73,6 @@ a:visited{
 
 .search-bar{
     flex-grow: 1;
-    margin-left: 15px;
     display: flex;
     gap: 10px;
     align-items: center;
@@ -92,6 +96,7 @@ a:visited{
     flex-grow: 1;
     display: flex;
     justify-content: space-between;
+    padding: 15px;
 }
 
 a h4,  a p{
@@ -100,7 +105,6 @@ a h4,  a p{
 
 .bottom-left{
     display: flex;
-    margin-left: 15px;
     padding-right: 15px;
     gap: 10px;
 }
@@ -144,7 +148,7 @@ a h4,  a p{
 .body{
     background-color: #D3D3D3;
     display: grid;
-    grid-template-rows: 1fr 5fr 1fr 5fr;
+    grid-template-rows: 1fr 8fr 1fr 8fr;
     grid-template-columns: 2fr 1fr;
 }
 
@@ -161,7 +165,6 @@ a h4,  a p{
 .grid-container{
     grid-row: 2 / -1;
     grid-column: 1 / 2;
-    background-color: yellow;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
@@ -189,5 +192,31 @@ a h4,  a p{
 
 .card-container{
     background-color: white;
+    border-radius: 25px;
+    display: grid;
+    grid-template-columns: 0.5fr 6.5fr 3fr;
+    grid-template-rows: 2fr 1fr;
+}
+
+.orange-stripe{
+    grid-row: 1 / -1;
+    border-radius: 25px 0 0 25px;
+    background-color:orange;
+}
+
+.main-card{
+    grid-row: 1 / 2;
+    grid-column: 2 / -1;
+    padding:10px;
+}
+
+.card-widgets{
+    grid-row: 2 / 3;
+    grid-column: 2 / -1;
+    padding: 10px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    gap: 10px;
 }
 
