--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     src: url("fonts/Roboto-Regular.ttf");
 }
 
+@font-face {
+    font-family: Roboto-bold;
+    src: url(fonts/Roboto-Bold.ttf);
+}
+
 :root{
     color: white;
     font-family: Roboto, sans-serif;
@@ -20,6 +25,11 @@ body{
 
 h4{
     font-weight: bolder;
+    font-family: Roboto-bold, sans-serif;
+}
+
+h4, p{
+    margin: 0;
 }
 
 
@@ -153,12 +163,21 @@ a h4,  a p{
 }
 
 .grid-title{
-    background-color: pink;
     grid-row: 1 / 2;
     grid-column: 1 / -1;
     padding-left: 15px;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: end;
+}
+
+#projects-title{
+    grid-column: 1 / 2;
+}
+
+#announcements-title{
+    grid-column: 3 / 4;
+    padding-left: 10px;
 }
 
 
@@ -175,7 +194,6 @@ a h4,  a p{
 .announcements-container{
     grid-row: 2 / 3;
     grid-column: 2 / -1;
-    background-color: purple;
 }
 
 .trending-title{
@@ -198,6 +216,10 @@ a h4,  a p{
     grid-template-rows: 2fr 1fr;
 }
 
+.card-container h4{
+    margin-bottom: 10px;
+}
+
 .orange-stripe{
     grid-row: 1 / -1;
     border-radius: 25px 0 0 25px;
@@ -207,7 +229,7 @@ a h4,  a p{
 .main-card{
     grid-row: 1 / 2;
     grid-column: 2 / -1;
-    padding:10px;
+    padding: 10px;
 }
 
 .card-widgets{
@@ -225,8 +247,12 @@ a h4,  a p{
 }
 
 .announcements{
-    padding: 15px;
-    border-radius: 25px;
+    padding: 25px;
+    border-radius: 15px;
     background: white;
+}
+
+.announcements h4{
+    margin-bottom: 10px;
 }
 
