--- a/style.css
+++ b/style.css
@@ -113,6 +113,10 @@ a h4,  a p{
     color: black;
 }
 
+a, a:visited {
+    color: white;
+}
+
 .bottom-left{
     display: flex;
     padding-right: 15px;
