--- a/style.css
+++ b/style.css
@@ -13,12 +13,13 @@
     font-family: Roboto, sans-serif;
 }
 
-body{
+body {
     display: grid;
     grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 4fr;
-    min-width: 0;
-    min-height: 0;
+    /*min-width: 0;
+    min-height: 0;*/
+    width: 100vw;
     height: 100vh;
     margin: 0;
 }
@@ -28,7 +29,7 @@ h2{
     font-family: Roboto-bold, sans-serif;
 }
 
-h2, p{
+h2, p {
     margin: 0;
 }
 
@@ -36,7 +37,7 @@ h2, p{
 
 aside {
     background-color: #3b5998;
-    height: 100%;
+    /*height: 100%;*/
     grid-row: 1 / -1;
     padding-left: 5px;
     padding-right: 5px;
@@ -58,7 +59,7 @@ a:visited{
 header{
     display: flex;
     flex-direction: column;
-    height: 100%;
+    /*height: 100%;*/
 }
 
 header, main {
@@ -90,7 +91,7 @@ header .top img{
 
 .search-bar input{
     border-radius: 20px;
-    width: 50%;
+    max-width: 50%;
 }
 
 
@@ -132,7 +133,8 @@ a, a:visited {
 }
 
 .img-container{
-    width: 30%;
+    /*width: 30%;*/
+    max-width: 30%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -140,7 +142,7 @@ a, a:visited {
 
 
 .bottom-left img{
-    min-width: 75%;
+    /*min-width: 75%;*/
 }
 
 .bottom-right{
@@ -155,8 +157,11 @@ a, a:visited {
     border-radius: 20px;
     color: white;
     background-color: #3b5998;
-    height: 2.25rem;
-    width: 5.0rem;
+    /*height: 2.25rem;
+    width: 5.0rem;*/
+    padding: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 main {
